@@ -160,37 +160,11 @@ R plugins:
 		- http://de3.php.net/manual/en/function.call-user-func.php seems to be faster than eval
 		- find out why an error in the backend often leads to a subsequent crash
 	- plugins (general)
-		- add import-filter plugins
-			- also export plugins, export x11 plugins, and probably more
-			- maybe this can be generalized as "context sensitive plugins"
-				- this context could also hold additional info such as filename to open, or device number
-			- Plan on context dependent actions:
-				- RKComponentMap additionally has a map of contexts (name -> context class)
-				- The contextclass (RKContextMap) is a map of RKComponentHandle (or id?)->Context parameters (such as filter name filter for import plugins, but may be empty for many others. Maybe a simple QString, for now)
-					- maybe a contextmap really IS an RKComponentMap!
-						- This would provide the benefit of already having a XMLGUI for pluggin into menus/contexts (but do we really need this? Probably only for some contexts such as X11 (where context info is already known) but not in others such as Import (where context info will have to be asked for, somewhere). OTOH, the context includer can decide, whether or not (and where) to merge the context)
-				- or maybe the attributes are a map, as well (attribute-name->attribute-value)
-				- in a pluginmap, the definition may look like:
-				<context id="...">
-					<entry component_id="..." parameters="...::..."/>
-				</context>
-				- components may be placed in multiple contexts, and even both inside and outside a context, if they can deal with all those contexts.
-				- RKComponentHandle will need an additional function invokeWithContext()
-				- RKStandardComponent needs that context as a parameter
-				- The context will simply be a list(Map) of RKComponentProperties, to copy into the RKStandardComponent (should they also be owned, there?)
-					- why not just set some RKComponentProperties directly?
-					- showing RKStandardComponents should be delayed using a 0 timer to call show
-				- An RKContextMap can be asked to provide an RKContextInstance, i.e. a class of actions (given an action collection) that can be plugged into a menu (with a structure?), and the context properties
-				- This context map will also have a single slot to receive the activation signals of all actions.
-					- By investigating QObject::sender (), and looking up the corresponding handle, it will dispatch to the correct RKStandardComponentHandle::invokeWithContext()
 		- ODS filter (try to find someone to implement one in R)
 	- formula-widget:
 		- use smart sorting, esp. of generated string
 		- add labels, add "up to level" option
 		- add constant term option
-	- create a spinbox, that can really deal with real numbers
-		- whenever the value changes (user entered text, or clicked up/down), the value will be translated into an integer number, and an integer exponent (in mapTextToValue(), and mapValueToText ()?)
-		- step size will be auto-adjusted logarithmically (e.g. always third most significant digit)
 	- multi-object option group:
 		- provide the set of enclosed options for each of the selected variables
 		- will provide dynamic properties based on which variables are selected in the source
