@@ -2,7 +2,7 @@
                           rkspinbox  -  description
                              -------------------
     begin                : Wed Aug 11 2004
-    copyright            : (C) 2004 by Thomas Friedrichsmeier
+    copyright            : (C) 2004, 2007 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -25,25 +25,28 @@ class QValidator;
 /** After constructing use one of setRealMode or setIntMode to initialize the Spinbox.
 @author Thomas Friedrichsmeier
 */
-class RKSpinBox : public QSpinBox
-{
-Q_OBJECT
+class RKSpinBox : public QSpinBox {
+	Q_OBJECT
 public:
-    RKSpinBox(QWidget *parent = 0);
-
-    ~RKSpinBox();
+	RKSpinBox (QWidget *parent = 0);
+	~RKSpinBox ();
 	
 	void setRealMode (double min, double max, double initial, int default_precision, int max_precision);
 	void setIntMode (int min, int max, int initial);
-	double realValue () { return ((double) value () / (double) divisor); };
+	double realValue () { return real_value; };
 	void setRealValue (double new_value);
 protected:
-	int mapTextToValue (bool *ok);
-	QString mapValueToText (int v);
+	void updateDisplay ();
+	void interpretText ();
 private:
 	enum Mode { Integer=0, Real=1 };
 	Mode mode;
-	int divisor;
+	bool updating;
+	bool updating_b;
+	double real_value;
+	double real_min;
+	double real_max;
+	int default_precision;
 	QValidator *validator;
 };
 
