@@ -1,5 +1,7 @@
-- input elements can be made required 							TODO: don't list this, but document!
+- improvements to spinbox: step size is adjusted dynamically, and no arbitrary limits in real mode
+- input elements and browser elements can be made required 				TODO: don't list this, but document!
 - fixed problem with specifying y axis limits in several plugins
+- simplified CSV import plugin
 - new plugin: import SPSS files								TODO: document
 - new documentation pages: console
 - improvements to distribution plot plugins
